# parcial3-CPD-Proyecto

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.py  docker-compose.ray.yml  pyproject.toml  requirements.txt
docs/: arquitectura.md  contrato_datos.md  reporte_tecnico.md
scripts/: run_pipeline.ps1  start_ray_head.ps1  start_ray_worker.ps1
src/atus_pipeline/: __init__.py  catalogs.py  cleaning.py  cli.py  config.py  pipeline.py  ray_dataset.py
src/atus_ray_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
